name:                graphics-concat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/conal/graphics-concat#README.md
license:             BSD3
license-file:        LICENSE
author:              Conal Elliott
maintainer:          conal@conal.net
copyright:           2017 Conal Elliott
category:            category
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ConCat.Graphics.GLSL
                       ConCat.Graphics.Image
  build-depends:       base >= 4.7 && < 5
                     , containers, directory, parsec, prettyclass, language-glsl
                     , NumInstances
                     , concat-classes
                     , concat-examples
  default-language:    Haskell2010

-- executable graphics-concat-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , graphics-concat
--   default-language:    Haskell2010

test-suite run
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Run.hs
  build-depends:       base
                     , ghc-prim
                     , language-glsl >= 0.2.0
                     , graphics-concat
                     , concat-classes
                     , concat-plugin
                     , concat-examples

                     , newtype-generics

  default-language:    Haskell2010
  ghc-options:         -fplugin=ConCat.Plugin

test-suite run-trace
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Run.hs
  build-depends:       base
                     , ghc-prim
                     , language-glsl >= 0.2.0
                     , graphics-concat
                     , concat-classes
                     , concat-plugin
                     , concat-examples

                     , newtype-generics
  default-language:    Haskell2010
  ghc-options:      -fplugin=ConCat.Plugin
                    -fplugin-opt=ConCat.Plugin:trace

source-repository head
  type:     git
  location: https://github.com/conal/graphics-concat
